fixing flex container, align items, justify content

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ nav a {
     width: 30%;
     text-align: center;
     color: #FFF;
-    font-family:fantasy;
+    font-family:comic sans ms, cursive, sans-serif;
 }
 .flex-container {
     display: -webkit-flex;
